--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^6.2.1",
     "axios": "^1.7.9",
+    "cache-manager": "^5.2.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "weather_report": "file:"
