--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
+    "@willsoto/nestjs-prometheus": "^6.0.1",
     "axios": "^1.7.9",
     "cache-manager": "^5.2.3",
     "nest-winston": "^1.9.7",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "weather_report": "file:",
