--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@willsoto/nestjs-prometheus": "^6.0.1",
     "axios": "^1.7.9",
     "cache-manager": "^5.2.3",
+    "joi": "^17.13.3",
     "nest-winston": "^1.9.7",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
